<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main" >

    <RelativeLayout
        android:id="@+id/congratulation_header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_header_size" >

        <TextView
            android:id="@+id/congratulation_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/congratulations"
            android:textColor="@color/purple_color"
            android:textSize="@dimen/heading_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/congratulation_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/congratulation_title_textview"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/img_next_arrow"
            android:gravity="center"
            android:padding="@dimen/btn_padding"
            android:text="@string/done"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/next_back_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/congratulation_header_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/header_spacing"
        android:background="@drawable/shape_rounded_corner_gray_bg" >

        <TextView
            android:id="@+id/congratulation_title_one_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:paddingLeft="10dip"
            android:text="@string/valert_setup"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/congratulation_content_one_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/congratulation_title_one_textview"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/content_one"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/congratulation_content_two_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/congratulation_content_one_textview"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/content_two"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />
        
         <TextView
            android:id="@+id/congratulation_content_three_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/congratulation_content_two_textview"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/content_three"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/congratulation_loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_rounded_corner_black_bg"
        android:padding="25dp"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/congratulation_loading_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_loading_white"
            android:contentDescription="@string/app_name"
            android:rotation="90" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/congratulation_loading_imageview"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/sending_sms"
            android:textColor="@color/white_color"
            android:textSize="@dimen/normal_text_size" />
    </RelativeLayout>

</RelativeLayout>