<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/findme_header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_header_size" >

        <TextView
            android:id="@+id/findme_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/find_me_heading"
            android:textColor="@color/purple_color"
            android:textSize="@dimen/heading_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/findme_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/findme_title_textview"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/img_back_arrow"
            android:gravity="center"
            android:padding="@dimen/btn_padding"
            android:text="@string/back"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/next_back_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/findme_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/findme_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/your_valrt_blink_and_beep"
        android:textColor="@color/violet_color"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold" />

</RelativeLayout>