<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_main" >

    <RelativeLayout
        android:id="@+id/aboutvsn_header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_header_size" >

        <TextView
            android:id="@+id/aboutvsn_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_vsn"
            android:textColor="@color/purple_color"
            android:textSize="@dimen/heading_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/aboutvsn_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/aboutvsn_title_textview"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/img_back_arrow"
            android:gravity="center"
            android:padding="@dimen/btn_padding"
            android:text="@string/back"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/next_back_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutvsn_header_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/header_spacing"
        android:background="@drawable/shape_rounded_corner_gray_bg"
        android:padding="10dp" >

        <TextView
            android:id="@+id/aboutvsn_content_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_vsn_text"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/aboutvsn_moreinfo_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aboutvsn_content_textview"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/moreinfo"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aboutvsn_moreinfo_textview"
            android:autoLink="web"
            android:text="@string/product_info_link"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/normal_text_size" />
    </RelativeLayout>

</RelativeLayout>