<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_main" >

    <RelativeLayout
        android:id="@+id/productinfo_header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_header_size" >

        <TextView
            android:id="@+id/productinfo_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/product_information_title"
            android:textColor="@color/purple_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/productinfo_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/productinfo_title_textview"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/img_back_arrow"
            android:gravity="center"
            android:padding="@dimen/btn_padding"
            android:text="@string/back"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/next_back_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/productinfo_content_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productinfo_header_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/header_spacing"
        android:background="@drawable/shape_rounded_corner_gray_bg"
        android:padding="10dp" >

        <TextView
            android:id="@+id/productinfo_content1_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_info_text1"
            android:textColor="@color/violet_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/productinfo_model_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productinfo_content1_textview"
            android:layout_marginTop="10dp"
            android:text="@string/product_reference"
            android:textColor="@color/violet_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/productinfo_model_number_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productinfo_model_number_textview"
            android:layout_marginTop="10dp"
            android:text="@string/product_info_text2"
            android:textColor="@color/violet_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/productinfo_appversion_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productinfo_model_number_textview"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/productinfo_model_number_value_textview"
            android:textColor="@color/violet_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/productinfo_moreinfo_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productinfo_model_number_value_textview"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/moreinfo"
            android:textColor="@color/violet_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productinfo_moreinfo_textview"
            android:autoLink="all"
            android:text="@string/product_info_link"
            android:textColor="@color/violet_color"
            android:textSize="16sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/productinfo_listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productinfo_content_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/spacing"
        android:cacheColorHint="@color/light_gray"
        android:scrollbars="none" />

</RelativeLayout>