<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main" >

    <RelativeLayout
        android:id="@+id/personal_info_header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_header_size" >

        <TextView
            android:id="@+id/personal_info_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/personal_info"
            android:textColor="@color/purple_color"
            android:textSize="@dimen/heading_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/personal_info_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/personal_info_title_textview"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/img_next_disable_arrow"
            android:gravity="center"
            android:padding="@dimen/btn_padding"
            android:text="@string/next"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/next_back_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/personal_info_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/personal_info_title_textview"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/img_back_arrow"
            android:gravity="center"
            android:padding="@dimen/btn_padding"
            android:text="@string/back"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/next_back_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/personal_info_container_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personal_info_header_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/header_spacing"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/country"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold" >
        </TextView>

        <Button
            android:id="@+id/personal_country_code_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_spinner"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/country"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/name"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold" >
        </TextView>

        <EditText
            android:id="@+id/personal_name_editview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_rounded_corner_gray_bg"
            android:hint="@string/name"
            android:inputType="textCapSentences"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/violet_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/violet_color"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold" >
        </TextView>

        <EditText
            android:id="@+id/personal_phonenumber_editview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_rounded_corner_gray_bg"
            android:digits="+0123456789"
            android:hint="@string/phone_number_with_area_code"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="13"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/violet_color"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>