<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tour_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/tour_image_imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/tour_footer_layout"
        android:layout_width="fill_parent"
        android:layout_height="190dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/transparent_black"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tour_title_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/slide1_title"
            android:textColor="@color/white_color"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tour_content_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/slide1_content"
            android:textColor="@color/white_color"
            android:textSize="@dimen/normal_text_size"
            android:scrollbars="vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tour_header_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/tour_logo_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/ic_valrt_logo_white" />
    </LinearLayout>

</RelativeLayout>